k8s/microservices/post-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  labels:
    app: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: localhost:5000/post-service:v0.1
          ports:
            - containerPort: 5002
