k8s/microservices/post-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 5002
