k8s/microservices/post-service/post-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  labels:
    app: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: SadditS6.azurecr.io/post-service:v0.1.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 5002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /post-service
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 80
